hphp/test/zend/good/ext/standard/tests/strings/bug54322.php
<?php
var_dump(
get_html_translation_table(NAN, 0, "UTF-8") > 0
);